change syntax for permitted params in contact controller

--- a/app/views/contacts/_contact.html.erb
+++ b/app/views/contacts/_contact.html.erb
@@ -2,4 +2,5 @@
   <%= link_to contact.first_name, contact.first_name %>
   <%= link_to contact.last_name, contact.last_name %>
   <%= link_to contact.email, contact.email %>
+  <%= link_to contact.phone_number, contact.phone_number %>
 <% end %>
