--- a/app/views/contacts/_contact.html.erb
+++ b/app/views/contacts/_contact.html.erb
@@ -1,6 +1,7 @@
 <%= div_for(contact) do %>
-  <%= link_to contact.first_name, contact.first_name %>
-  <%= link_to contact.last_name, contact.last_name %>
-  <%= link_to contact.email, contact.email %>
-  <%= link_to contact.phone_number, contact.phone_number %>
+  <%= contact.first_name %>
+  <%= contact.last_name %>
+  <a href="mailto:<%= contact.email%>"><%= contact.email %></a>
+  <%= contact.phone_number %>
+  <%= link_to "Delete", contact, method: :delete, data: { confirm: "Are you sure?" } %>
 <% end %>
