--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(Contact.new) do |form| %>
   <%= form.text_field :first_name, placeholder: "First Name" %>
-  <%= form.text_field :last_name, placeholder: "Last Name" %>
+  <%= form.text_field :last_name, placeholder: "Second Name" %>
   <%= form.text_field :phone_number, placeholder: "Phone Number" %>
   <%= form.text_field :address, placeholder: "Address" %>
   <%= form.text_field :email, placeholder: "Email" %>
